Upgrade dependencies (#133)
* Upgrade dependencies, fail on compiler warnings

* Add changelog entry

* Add tests with Java 21

* Fix deprecation warning

* Reduce log verbosity

* Suppress warnings

* Code cleanup

* Upgrade dependencies

---------

Co-authored-by: kaklakariada <kaklakariada@users.noreply.github.com>